# Xenon

./: .flake8  .gitignore  .pdm.toml  .pylintrc  .readthedocs.yml  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  requirements.txt
doc/: CHANGELOG.md  ROADMAP.md  TODO.md  conf.py  index.rst
doc/about/: CHANGELOG.md  CONTRIBUTE.rst  ROADMAP.md  START.rst  about.rst
doc/plugin/: about.rst  std.rst  suggestions.rst
lib/: __init__.py  command.py  config.py  console.py  control.py  database.py  dependency.py  log.py  path.py  permission.py  plugin.py  utils.py
module/: __init__.py  mc_server.py  mc_skin.py
module/cave/: __init__.py  db.py
plugin/: __init__.py  abbreviation.py  about.py  dice.py  exec.py  get_anime_pic.py  management.py  music.py  server_info.py  soup.py  test.py
plugin/KissKiss/: __init__.py
plugin/PHLogoGen/: __init__.py
plugin/PetPet/: __init__.py
plugin/cave/: __init__.py  entry_parser.py
plugin/daily_poem/: __init__.py
plugin/history_today/: __init__.py  data.json  history.json
utils/: dependency_resolve.py
