[project]
name = ""
version = {from = "lib/__init__.py"}
description = ""
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = [
    "graia-ariadne[full]>=0.5.3.post2",
    "toml>=0.10.2",
    "peewee>=3.14.8"]
requires-python = ">=3.9"
license = {text = "AGPL-3.0"}

[project.urls]
homepage = ""

[project.optional-dependencies]
plugin = [
    "pillow>=9.0.1",
    "mcstatus>=6.5.0",
]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]
[tool.pdm.scripts]
xenon = "python main.py"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = "110"